// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardThumbnail renders correctly with default settings 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignContent": "center",
      "backgroundColor": "#fff",
      "flexDirection": "column",
      "margin": 4,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignContent": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginHorizontal": 4,
        "marginVertical": 10,
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        {
          "flex": 2,
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <View>
        <Text
          style={
            {
              "fontSize": 20,
            }
          }
        >
          data name
        </Text>
      </View>
      <View>
        <Text>
          Sample action 1
        </Text>
        <Text>
          Sample action 2
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "height": 100,
        }
      }
    >
      <Image
        source={
          {
            "uri": "file://image-path-here.jpg",
          }
        }
        style={
          [
            {
              "aspectRatio": 1.3333333333333333,
              "flex": 1,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`CardThumbnail renders correctly with fullWidth = false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignContent": "center",
      "backgroundColor": "#fff",
      "flexDirection": "column",
      "margin": 4,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignContent": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginHorizontal": 4,
        "marginVertical": 10,
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        {
          "flex": 2,
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <View>
        <Text
          style={
            {
              "fontSize": 20,
            }
          }
        >
          data name
        </Text>
      </View>
      <View>
        <Text>
          Sample action 1
        </Text>
        <Text>
          Sample action 2
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "height": 100,
        }
      }
    >
      <Image
        source={
          {
            "uri": "file://image-path-here.jpg",
          }
        }
        style={
          [
            {
              "aspectRatio": 1.3333333333333333,
              "flex": 1,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`CardThumbnail renders correctly with fullWidth = true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignContent": "center",
      "backgroundColor": "#fff",
      "flexDirection": "column",
      "margin": 4,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignContent": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginHorizontal": 4,
        "marginVertical": 10,
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        {
          "flex": 2,
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <View>
        <Text
          style={
            {
              "fontSize": 20,
            }
          }
        >
          data name
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Image
      source={
        {
          "uri": "file://image-path-here.jpg",
        }
      }
      style={
        [
          {
            "aspectRatio": 1.3333333333333333,
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;
